# strata

./: .gitignore  LICENSE  README.md  SPEC.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
paper/: README.md  strata_paper.md  strata_paper_KR.md
paper/experiments/: CMakeLists.txt  run_all.sh
paper/experiments/plot/: plot_architecture.py  plot_e1_f1_vs_time.py  plot_e2_periodicity.py  plot_e3_sensitivity.py  plot_e4_throughput.py  run_all_plots.sh  style.py
paper/experiments/results/: e1_static_quality.csv  e2_amplitude_vs_length.csv  e2_classification.csv  e2_summary.csv  e3_sensitivity.csv  e4_throughput.csv
paper/experiments/src/: common.hpp  e1_static_quality.cpp  e2_periodicity.cpp  e3_sensitivity.cpp  e4_throughput.cpp
paper/figures/: README.md
paper/latex/: main.tex  references.bib
paper/notes/: core_math.md  experiments_summary.md  outline.md  related_work.md  system.md  tests.md
paper/sections/: discussion.md  experiments.md  intro.md  method.md  related.md
prism_map/: CMakeLists.txt  package.xml
prism_map/include/prism_map/: mapping_node.hpp
prism_map/launch/: grid2d.launch.py  voxel3d.launch.py
prism_map/params/: grid2d.yaml  voxel3d.yaml
prism_map/rviz/: prism_map.rviz
prism_map/src/: cloud_adapter.cpp  main.cpp  mapping_node.cpp  scan_adapter.cpp
prism_map/test/: test_grid_math.cpp  test_scan_adapter.cpp
prism_map_core/: CMakeLists.txt  package.xml
prism_map_core/include/prism_map_core/: grid2d_backend.hpp  layered_map.hpp  map_backend.hpp  periodicity.hpp  types.hpp  version.hpp  voxel3d_backend.hpp
prism_map_core/src/: grid2d_backend.cpp  layered_map.cpp  periodicity.cpp  types.cpp  voxel3d_backend.cpp
prism_map_core/test/: test_grid2d_backend.cpp  test_integration.cpp  test_layered_map.cpp  test_periodicity.cpp  test_smoke.cpp  test_types.cpp  test_voxel3d_backend.cpp
strata/: CMakeLists.txt  package.xml
strata/include/strata/: mapping_node.hpp
strata/launch/: grid2d.launch.py  voxel3d.launch.py
strata/params/: grid2d.yaml  voxel3d.yaml
strata/rviz/: prism_map.rviz
strata/src/: cloud_adapter.cpp  main.cpp  mapping_node.cpp  scan_adapter.cpp
strata/test/: test_grid_math.cpp  test_scan_adapter.cpp
strata_core/: CMakeLists.txt  package.xml
strata_core/include/strata_core/: grid2d_backend.hpp  layered_map.hpp  map_backend.hpp  periodicity.hpp  types.hpp  version.hpp  voxel3d_backend.hpp
strata_core/src/: grid2d_backend.cpp  layered_map.cpp  periodicity.cpp  types.cpp  voxel3d_backend.cpp
strata_core/test/: test_grid2d_backend.cpp  test_integration.cpp  test_layered_map.cpp  test_periodicity.cpp  test_smoke.cpp  test_types.cpp  test_voxel3d_backend.cpp
